--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="icon" href="/images/about.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./images/about.png" type="image/x-icon" />
     <title>Sobre Nós</title>
 </head>
 
