--- a/produtos.html
+++ b/produtos.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="icon" href="/images/produtos.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./images/produtos.png" type="image/x-icon" />
     <title>Produtos</title>
 </head>
 
@@ -20,11 +20,11 @@
     </div>
     <div id="vinylPro">
         <figure>
-            <img src="/images/scaringthehoes.jpg" width="300" height="300">
+            <img src="./images/scaringthehoes.jpg" width="300" height="300">
             <figcaption>$89,90</figcaption>
         </figure>
         <figure>
-            <img src="/images/taylorsspeaknow.jpg" width="300" height="300">
+            <img src="./images/taylorsspeaknow.jpg" width="300" height="300">
             <figcaption>$164,90</figcaption>
         </figure>
     </div>
@@ -36,11 +36,11 @@
     </div>
     <div id="vinylPro">
         <figure>
-            <img src="/images/okcomputer.jpg" width="300" height="300">
+            <img src="./images/okcomputer.jpg" width="300" height="300">
             <figcaption>$124,90</figcaption>
         </figure>
         <figure>
-            <img src="/images/36chambers.jpg" width="300" height="300">
+            <img src="./images/36chambers.jpg" width="300" height="300">
             <figcaption>$94,90</figcaption>
         </figure>
     </div>
@@ -52,11 +52,11 @@
     </div>
     <div id="vinylPro">
         <figure>
-            <img src="/images/skinnyfists.jpg" width="300" height="300">
+            <img src="./images/skinnyfists.jpg" width="300" height="300">
             <figcaption>$99,90</figcaption>
         </figure>
         <figure>
-            <img src="/images/vespertine.jpg" width="300" height="300">
+            <img src="./images/vespertine.jpg" width="300" height="300">
             <figcaption>$99,90</figcaption>
         </figure>
     </div>
@@ -68,11 +68,11 @@
     </div>
     <div id="vinylPro">
         <figure>
-            <img src="/images/blackstar.jpg" width="300" height="300">
+            <img src="./images/blackstar.jpg" width="300" height="300">
             <figcaption>$109,90</figcaption>
         </figure>
         <figure>
-            <img src="/images/angelic2thecore.jpg" width="300" height="300">
+            <img src="./images/angelic2thecore.jpg" width="300" height="300">
             <figcaption>$5000,01</figcaption>
         </figure>
     </div>
