--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" href="./images/index.png" type="image/x-icon" />
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/index.png" type="image/x-icon" />
     <title>Strawberry Sounds</title>
 </head>
 
@@ -15,7 +15,7 @@
     <div id="tituloInd">
         <h1>Boas-vindas a Strawberry Sounds!</h1>
         <p>
-            <img src="./images/oiiii.gif" width="800" height="400">
+            <img src="images/oiiii.gif" width="800" height="400">
         </p>
     </div>
 </body>
