--- a/produtos.html
+++ b/produtos.html
@@ -7,18 +7,18 @@
     <title>Produtos</title>
 </head>
 
-<body>
-    <div id="menuPro">
+<body class="bodyStuff">
+    <div class="box">
         <button onclick="window.location.href='./about.html'">Sobre Nós</button>
         <button onclick="window.location.href='./index.html'">Página Principal</button>
     </div>
-    <div id="tituloPro">
+    <div class="tituloPro">
         <h1>Mais Recentes:</h1>
     </div>
-    <div id="contentPro">
+    <div class="contentPro">
         <h3>JPEGMAFIA & Danny Brown - Scaring The Hoes / Taylor Swift - Speak Now (Taylor's Version)</h3>
     </div>
-    <div id="vinylPro">
+    <div class="vinylPro">
         <figure>
             <img src="images/scaringthehoes.jpg" width="300" height="300">
             <figcaption>$89,90</figcaption>
@@ -28,13 +28,13 @@
             <figcaption>$164,90</figcaption>
         </figure>
     </div>
-    <div id="tituloPro">
+    <div class="tituloPro">
         <h1>Anos 90:</h1>
     </div>
-    <div id="contentPro">
+    <div class="contentPro">
         <h3>Radiohead - OK Computer / Wu-Tang Clan - Enter the Wu-Tang (36 Chambers)</h3>
     </div>
-    <div id="vinylPro">
+    <div class="vinylPro">
         <figure>
             <img src="images/okcomputer.jpg" width="300" height="300">
             <figcaption>$124,90</figcaption>
@@ -44,13 +44,13 @@
             <figcaption>$94,90</figcaption>
         </figure>
     </div>
-    <div id="tituloPro">
+    <div class="tituloPro">
         <h1>Anos 2000:</h1>
     </div>
-    <div id="contentPro">
+    <div class="contentPro">
         <h3>Godspeed You Black Emperor! - Lift Yr. Skinny Fists Like Antennas To Heaven! / Björk - Vespertine</h3>
     </div>
-    <div id="vinylPro">
+    <div class="vinylPro">
         <figure>
             <img src="images/skinnyfists.jpg" width="300" height="300">
             <figcaption>$99,90</figcaption>
@@ -60,13 +60,13 @@
             <figcaption>$99,90</figcaption>
         </figure>
     </div>
-    <div id="tituloPro">
+    <div class="tituloPro">
         <h1>Anos 2010:</h1>
     </div>
-    <div id="contentPro">
+    <div class="contentPro">
         <h3>David Bowie - Blackstar / Corey Feldman - Angelic 2 The Core</h3>
     </div>
-    <div id="vinylPro">
+    <div class="vinylPro">
         <figure>
             <img src="images/blackstar.jpg" width="300" height="300">
             <figcaption>$109,90</figcaption>
