--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Strawberry Sounds</title>
 </head>
 
-<body>
-    <div id="menuInd">
-        <button onclick="window.location.href='./about.html'">Sobre Nós</button>
-        <button onclick="window.location.href='./produtos.html'">Produtos</button>
+<body class="bodyInd">
+    <div class="box">
+            <button onclick="window.location.href='./about.html'">Sobre Nós</button>
+            <button onclick="window.location.href='./produtos.html'">Produtos</button>
     </div>
-    <div id="tituloInd">
+    <div class="tituloInd">
         <h1>Boas-vindas a Strawberry Sounds!</h1>
         <p>
             <img src="images/oiiii.gif" width="800" height="400">
