--- a/about.html
+++ b/about.html
@@ -7,25 +7,25 @@
     <title>Sobre Nós</title>
 </head>
 
-<body>
-    <div id="menuAbo">
+<body class="bodyAbout">
+    <div class="box">
         <button onclick="window.location.href='./index.html'">Página Principal</button>
         <button onclick="window.location.href='./produtos.html'">Produtos</button>
     </div>
-    <div id="tituloAbo">
+    <div class="tituloAbo">
         <h1>Sobre Nós:</h1>
     </div>
-    <div id="contentAbo">
+    <div class="contentAbo">
         <p>Nós da Strawberry Sounds nos especializamos em vendas de vinis. Nosso catálogo vai desde os anos 90 (mas
             <br>estamos planejando em aumentar para decadas anteriores) até os dias atuais. Estamos funcionando desde
             2023
             <br>e não pretendemos parar tão cedo.
         </p>
     </div>
-    <div id="tituloAbo">
+    <div class="tituloAbo">
         <h3>Contato:</h3>
     </div>
-    <div id="contentAbo">
+    <div class="contentAbo">
         <p>WhatsApp: 4002-8922</p>
         <p>Email: asdf.qwerty@gmail.com</p>
     </div>
