--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="box">
             <button onclick="window.location.href='./about.html'">Sobre Nós</button>
             <button onclick="window.location.href='./produtos.html'">Produtos</button>
+            <button onclick="window.location.href='./cadastro.html'">Cadastro</button>
+            <button onclick="window.location.href='./login.html'">Login</button>
     </div>
     <div class="tituloInd">
         <h1>Boas-vindas a Strawberry Sounds!</h1>
