--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <div class="box">
         <button onclick="window.location.href='./index.html'">Página Principal</button>
         <button onclick="window.location.href='./produtos.html'">Produtos</button>
+        <button onclick="window.location.href='./cadastro.html'">Cadastro</button>
+        <button onclick="window.location.href='./login.html'">Login</button>
     </div>
     <div class="tituloAbo">
         <h1>Sobre Nós:</h1>
