--- a/cadastro.html
+++ b/cadastro.html
@@ -4,13 +4,16 @@
 <head>
     <title>Tela de Cadastro</title>
     <script src="index.js" defer></script>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 
-<body>
+<body class="bodyReg">
     <div class="register" id="register-container">
         <h1> Cadastro </h1>
         <form>
+            <label for="register-nome">Nome: </label>
+            <input type="name" id="register-nome" placeholder="insira seu nome" required>
+
             <label for="register-email">Email: </label>
             <input type="email" id="register-email" placeholder="exemplo@email.com" required>
 
@@ -19,11 +22,11 @@
 
             <button type="button" onclick="register()"> Cadastrar </button>
         </form>
-    </div>
-
+        <br>
     <div id="result"></div>
     <br>
-    <button onclick="window.location.href='/login.html'"> Login </button>
+    <button onclick="window.location.href='./login.html'">Já tenho Login</button>
+    </div>
 </body>
 
 </html>
