--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 <head>
     <title>Tela de Login</title>
     <script src="index.js" defer></script>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 
-<body>
+<body class="bodyLog">
     <div class="login" id="login-container">
         <h1> Login </h1>
         <form>
@@ -19,11 +19,11 @@
 
             <button type="button" onclick="login()">Entrar</button>
         </form>
-    </div>
-
+        <br>
     <div id="result"></div>
     <br>
-    <button onclick="window.location.href='/cadastro.html'"> Cadastro </button>
+    <button onclick="window.location.href='./cadastro.html'">Não tenho Cadastro</button>
+    </div>
 </body>
 
 </html>
