--- a/produtos.html
+++ b/produtos.html
@@ -11,6 +11,8 @@
     <div class="box">
         <button onclick="window.location.href='./about.html'">Sobre Nós</button>
         <button onclick="window.location.href='./index.html'">Página Principal</button>
+        <button onclick="window.location.href='./cadastro.html'">Cadastro</button>
+        <button onclick="window.location.href='./login.html'">Login</button>
     </div>
     <div class="tituloPro">
         <h1>Mais Recentes:</h1>
